--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-pager-view": "^8.0.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
